--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "affnityanswers assignment",
   "main": "index.js",
   "dependencies": {
+    "react":"17.0.2",
     "axios": "^0.21.1",
     "react-csv-to-table": "^0.0.4",
     "react-scripts": "^4.0.3",
